Fix: issue with detail page overflowing on mobile view #3

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@
 html,
 body,
 #root {
-  width: 100%;
-  height: 100%;
+  width: 100svw;
+  height: 100svh;
   margin: 0;
   padding: 0;
   overflow: hidden;
